<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:minWidth="@dimen/dialog_min_width"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorInfo"
        android:gravity="center"
        android:minHeight="@dimen/dialog_header_height"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/icon"
            android:layout_width="@dimen/dialog_header_image"
            android:layout_height="@dimen/dialog_header_image"
            android:src="@drawable/puppy" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:orientation="vertical"
        android:padding="@dimen/spacing_mlarge">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/grey_90" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/data"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_90" />

            <TextView
                android:id="@+id/tv_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/dummy_content_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/grey_60" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tipe"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_90" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/dummy_content_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/grey_60" />
        </LinearLayout>

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/dummy_content_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/grey_60" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cont_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin_small"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin_small">

            <LinearLayout
                android:id="@+id/cont_aksi_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/fb_image"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/ic_fb" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/twitter_image"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:padding="@dimen/activity_horizontal_margin_xsmall"
                    android:src="@drawable/ic_twitter" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/whatsapp"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/ic_wa" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_search_web"
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cont_aksi_share"
                android:text="@string/SEARCH_IN_WEB"
                android:visibility="gone" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/lyt_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_middle"
        android:gravity="end|right"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/spacing_large"
        android:paddingRight="@dimen/spacing_large">

        <Button
            android:id="@+id/btn_negative"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/NO" />

        <Button
            android:id="@+id/btn_positive"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/YES" />

    </LinearLayout>

</LinearLayout>